nochmals single container

--- a/Shopping.Client/Views/Home/Index.cshtml
+++ b/Shopping.Client/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h1>Products - Single Container</h1>
+<h1>Products - Single Container für BCS</h1>
 <table class="table table-bordered">
     <thead>
     <tr>
